--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -527,8 +527,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: 0px;
 }
 
-.bottom-10{
-  bottom: 2.5rem;
+.bottom-16{
+  bottom: 4rem;
 }
 
 .bottom-0{
@@ -567,16 +567,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 2rem;
 }
 
-.mt-4{
-  margin-top: 1rem;
-}
-
 .mt-6{
   margin-top: 1.5rem;
 }
 
-.mr-6{
-  margin-right: 1.5rem;
+.mb-12{
+  margin-bottom: 3rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
+}
+
+.mt-12{
+  margin-top: 3rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
 }
 
 .block{
@@ -589,6 +597,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex{
   display: flex;
+}
+
+.hidden{
+  display: none;
 }
 
 .h-screen{
@@ -615,24 +627,62 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 5rem;
 }
 
-.h-36{
-  height: 9rem;
+.h-\[calc\(100vh-20rem\)\]{
+  height: calc(100vh - 20rem);
 }
 
-.h-96{
-  height: 24rem;
+.h-\[calc\(60vh-10rem\)\]{
+  height: calc(60vh - 10rem);
 }
 
-.h-7{
-  height: 1.75rem;
+.h-\[calc\(20vh-10rem\)\]{
+  height: calc(20vh - 10rem);
 }
 
-.h-72{
-  height: 18rem;
+.h-\[calc\(40vh-10rem\)\]{
+  height: calc(40vh - 10rem);
+}
+
+.h-\[calc\(50vh-10rem\)\]{
+  height: calc(50vh - 10rem);
+}
+
+.h-\[calc\(100vh-40rem\)\]{
+  height: calc(100vh - 40rem);
+}
+
+.h-\[calc\(100vh\/1\.25\)\]{
+  height: calc(100vh / 1.25);
+}
+
+.h-\[calc\(100vh\/2\.5\)\]{
+  height: calc(100vh / 2.5);
+}
+
+.h-\[calc\(100vh\/3\.5\)\]{
+  height: calc(100vh / 3.5);
+}
+
+.h-\[calc\(100vh\/3\.8\)\]{
+  height: calc(100vh / 3.8);
+}
+
+.h-\[calc\(100vh\/10rem\)\]{
+  height: calc(100vh / 10rem);
+}
+
+.h-max{
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
 }
 
 .min-h-screen{
   min-height: 100vh;
+}
+
+.min-h-full{
+  min-height: 100%;
 }
 
 .w-full{
@@ -653,20 +703,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 10rem;
 }
 
-.w-48{
-  width: 12rem;
+.w-4\/5{
+  width: 80%;
 }
 
-.w-72{
-  width: 18rem;
-}
-
-.w-96{
-  width: 24rem;
-}
-
-.w-\[30rem\]{
-  width: 30rem;
+.w-3\/4{
+  width: 75%;
 }
 
 .flex-shrink-0{
@@ -677,29 +719,33 @@ Ensure the default browser behavior of the `hidden` attribute.
   flex-shrink: 0;
 }
 
+.cursor-grabbing{
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
+}
+
+.select-none{
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 .snap-x{
   -ms-scroll-snap-type: x var(--tw-scroll-snap-strictness);
       scroll-snap-type: x var(--tw-scroll-snap-strictness);
+}
+
+.snap-mandatory{
+  --tw-scroll-snap-strictness: mandatory;
 }
 
 .snap-center{
   scroll-snap-align: center;
 }
 
-.scroll-mt-24{
-  scroll-margin-top: 6rem;
-}
-
 .scroll-mt-20{
   scroll-margin-top: 5rem;
-}
-
-.scroll-mt-16{
-  scroll-margin-top: 4rem;
-}
-
-.-scroll-mt-20{
-  scroll-margin-top: -5rem;
 }
 
 .flex-col{
@@ -726,20 +772,38 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-x-6 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(1.5rem * var(--tw-space-x-reverse));
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.overflow-x-auto{
-  overflow-x: auto;
+.space-x-2 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-6 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+
+.space-x-12 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(3rem * var(--tw-space-x-reverse));
+  margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.overflow-hidden{
+  overflow: hidden;
 }
 
 .overflow-x-scroll{
@@ -754,8 +818,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 9999px;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
+.rounded-xl{
+  border-radius: 0.75rem;
 }
 
 .border{
@@ -780,10 +844,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-debug{
   --tw-bg-opacity: 1;
   background-color: rgb(157 23 77 / var(--tw-bg-opacity));
-}
-
-.bg-transparent{
-  background-color: transparent;
 }
 
 .object-cover{
@@ -813,6 +873,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pt-24{
@@ -845,6 +910,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 5rem;
   line-height: 5rem;
   letter-spacing: 0.25rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .font-bold{
@@ -881,6 +951,79 @@ Ensure the default browser behavior of the `hidden` attribute.
   opacity: 0.4;
 }
 
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-background{
+  --tw-shadow-color: #0D0D0D;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-accent{
+  --tw-shadow-color: #0B74BF;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#000\]{
+  --tw-shadow-color: #000;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#333\]{
+  --tw-shadow-color: #333;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#181818\]{
+  --tw-shadow-color: #181818;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#0d0d0d\]{
+  --tw-shadow-color: #0d0d0d;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#0f0f0f\]{
+  --tw-shadow-color: #0f0f0f;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#111\]{
+  --tw-shadow-color: #111;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#121212\]{
+  --tw-shadow-color: #121212;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#010101\]{
+  --tw-shadow-color: #010101;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-\[\#0a0a0a\]{
+  --tw-shadow-color: #0a0a0a;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .outline{
   outline-style: solid;
 }
@@ -901,24 +1044,15 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-timing-function: linear;
 }
 
-.hover\:bg-accent:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(11 116 191 / var(--tw-bg-opacity));
+.will-change-contents{
+  will-change: contents;
 }
 
-.hover\:bg-opacity-60:hover{
-  --tw-bg-opacity: 0.6;
-}
-
-.hover\:bg-opacity-30:hover{
-  --tw-bg-opacity: 0.3;
+.will-change-transform{
+  will-change: transform;
 }
 
 @media (min-width: 640px){
-  .sm\:right-6{
-    right: 1.5rem;
-  }
-
   .sm\:right-12{
     right: 3rem;
   }
@@ -931,12 +1065,72 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-left: auto;
   }
 
+  .sm\:mt-12{
+    margin-top: 3rem;
+  }
+
+  .sm\:mt-8{
+    margin-top: 2rem;
+  }
+
   .sm\:h-48{
     height: 12rem;
   }
 
   .sm\:h-8{
     height: 2rem;
+  }
+
+  .sm\:h-\[calc\(100vh-20rem\)\]{
+    height: calc(100vh - 20rem);
+  }
+
+  .sm\:h-\[calc\(50vh-20rem\)\]{
+    height: calc(50vh - 20rem);
+  }
+
+  .sm\:h-\[300px\]{
+    height: 300px;
+  }
+
+  .sm\:h-4{
+    height: 1rem;
+  }
+
+  .sm\:h-\[600px\]{
+    height: 600px;
+  }
+
+  .sm\:h-\[calc\(100vh-10rem\)\]{
+    height: calc(100vh - 10rem);
+  }
+
+  .sm\:h-\[calc\(100vh\/2\)\]{
+    height: calc(100vh / 2);
+  }
+
+  .sm\:h-\[calc\(100vh\/1\.25\)\]{
+    height: calc(100vh / 1.25);
+  }
+
+  .sm\:h-\[calc\(100vh\/\)\]{
+    height: calc(100vh / );
+  }
+
+  .sm\:h-\[calc\(100vh\/0\.25\)\]{
+    height: calc(100vh / 0.25);
+  }
+
+  .sm\:h-\[calc\(100vh\/1\.1\)\]{
+    height: calc(100vh / 1.1);
+  }
+
+  .sm\:h-\[calc\(90-20rem\)\]{
+    height: calc(90 - 20rem);
+  }
+
+  .sm\:h-\[calc\(100vh-15rem\)\]{
+    height: calc(100vh - 15rem);
   }
 
   .sm\:w-min{
@@ -953,8 +1147,28 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 2rem;
   }
 
+  .sm\:w-3\/5{
+    width: 60%;
+  }
+
+  .sm\:w-2\/4{
+    width: 50%;
+  }
+
   .sm\:flex-row{
     flex-direction: row;
+  }
+
+  .sm\:space-x-12 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(3rem * var(--tw-space-x-reverse));
+    margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .sm\:space-y-4 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-y-reverse: 0;
+    margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(1rem * var(--tw-space-y-reverse));
   }
 
   .sm\:text-right{
@@ -983,20 +1197,20 @@ Ensure the default browser behavior of the `hidden` attribute.
     letter-spacing: 0rem;
   }
 
-  .sm\:font-black{
-    font-weight: 900;
-  }
-
   .sm\:font-bold{
     font-weight: 700;
   }
 
-  .sm\:uppercase{
-    text-transform: uppercase;
+  .sm\:font-black{
+    font-weight: 900;
   }
 
   .sm\:leading-tight{
     line-height: 1.25;
+  }
+
+  .sm\:tracking-normal{
+    letter-spacing: 0em;
   }
 }
 
@@ -1005,6 +1219,11 @@ Ensure the default browser behavior of the `hidden` attribute.
     --tw-space-x-reverse: 0;
     margin-right: calc(1.5rem * var(--tw-space-x-reverse));
     margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
+  .md\:px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .md\:py-4{
@@ -1017,8 +1236,12 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-right: 2rem;
   }
 
-  .md\:px-12{
-    padding-left: 3rem;
-    padding-right: 3rem;
+  .md\:hover\:bg-accent:hover{
+    --tw-bg-opacity: 1;
+    background-color: rgb(11 116 191 / var(--tw-bg-opacity));
+  }
+
+  .md\:hover\:bg-opacity-70:hover{
+    --tw-bg-opacity: 0.7;
   }
 }
