--- a/src/events/events.css
+++ b/src/events/events.css
@@ -11,10 +11,10 @@
 }
 
 .headtext{
-    position:absolute;
+    position: fixed;
     width: 250px;
     height: 77px;
-    left: 80px;
+    left: 7%;
     top: 7%;
 
     font-family: 'Montserrat';
@@ -27,11 +27,11 @@
 
 
 .card-collection{
-    margin: 10% auto;
+    margin-top: 16%;
     display: -webkit-flex;
 	display: flex;
-	-webkit-justify-content: space-around;
-	justify-content: space-around;
+	-webkit-justify-content: space-between;
+	justify-content: space-between;
 	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
     -webkit-align-content: center;
@@ -188,7 +188,7 @@ body::-webkit-scrollbar-track {
     height: 80%;
     background: rgba(128, 143, 163, 0.562);        /* color of the tracking area */
   }
-  
+
 body::-webkit-scrollbar-thumb {
     height: 20%;
     background-color: rgb(0, 0, 0);    /* color of the scroll thumb */
@@ -200,12 +200,12 @@ body::-webkit-scrollbar-thumb {
     width: 12px;
     margin: auto;
   }
-  
+
  .modal::-webkit-scrollbar-track {
     height: 80%;
     background: 0;        /* color of the tracking area */
   }
-  
+
 .modal::-webkit-scrollbar-thumb {
     height: 20%;
     background-color: rgba(239, 239, 247, 0.863);    /* color of the scroll thumb */
@@ -227,27 +227,29 @@ a{
 @media screen and (max-width: 820px)
 {
     div.headtext{
-        font-size: 6em;
+        display: flex;
+        justify-content: flex-start;
+        font-size: 3em;
     }
     .card{
         margin: 1em;
     }
     .card-collection{
-        margin: 25% auto;
+        margin-top: 7rem;
     }
 
     .modal{
         width: 100%;
-        height: 90%;
+        height: 80%;
         overflow: auto;
     }
 
     .modal-header{
-        font-size: 1.8rem;
+        font-size: 1rem;
 
     }
     .modal-body{
-        font-size: 1.2rem;
+        font-size: 0.5rem;
     }
     .modal-header .close-button{
         font-size: 2rem;
@@ -255,5 +257,17 @@ a{
         top: 3%;
         left: 85%;
         bottom: 90%;
+    }
+    #card-image{
+        height: 50%;
+    }
+    .name{
+        top: 50%;
+    }
+    .bio{
+        top: 62%;
+    }
+    .special-image{
+        height: 10%;
     }
 }
