--- a/src/events/events.css
+++ b/src/events/events.css
@@ -27,7 +27,7 @@
 
 
 .card-collection{
-    margin-top: 16%;
+    margin: 10%;
     display: -webkit-flex;
 	display: flex;
 	-webkit-justify-content: space-between;
@@ -43,7 +43,7 @@
 }
 
 .card{
-    height: 575px;
+    height: 600px;
     width: 600px;
     background-color: white;
     backdrop-filter: blur(16px) saturate(180%);
@@ -51,7 +51,7 @@
     background-color: rgba(30, 33, 41, 0.301);
     text-align: center;
     position: relative;
-    margin: 1% auto;
+    margin: 1%;
     top:0;
     bottom: 0;
     left: 0;
@@ -60,7 +60,7 @@
 }
 
 img#card-image {
-    border-radius: 28px 28px 0 0;
+    border-radius: 28px;
 }
 
 .container{
@@ -102,9 +102,9 @@ button{
     font-family: 'Montserrat', sans-serif;
     border: none;
     font-size: 15px;
-    padding: 13px 25px;
+    padding: 10px 20px;
     position: fixed;
-    bottom: 30px;
+    bottom: 10%;
     border-radius: 28px;
     cursor: pointer;
 }
@@ -128,6 +128,7 @@ button:hover{
     width: 1700px;
     height: 900px;
     max-width: 80%;
+    
 }
 
 .modal.active{
@@ -140,7 +141,7 @@ button:hover{
     font-weight: 800;
     letter-spacing: 1px;
     color: rgb(255, 255, 255);
-    padding: 30px 60px 15px;
+    padding: 30px 80px 20px 30px;
     display: flex;
     flex-direction: row;
     -webkit-justify-content: space-between;
@@ -159,7 +160,7 @@ button:hover{
 }
 
 .modal-body{
-    padding:8px 40px 40px 60px;
+    padding:8px 30px 30px 30px;
     font-size: 20px;
     color: rgb(255, 255, 255);
     font-family: "Montserrat",sans-serif;
@@ -197,7 +198,8 @@ body::-webkit-scrollbar-thumb {
   }
 
 .modal::-webkit-scrollbar {
-    width: 12px;
+    height: 15%;
+    width: 10px;
     margin: auto;
   }
 
@@ -224,18 +226,28 @@ a{
     color: rgba(134, 248, 248, 0.788);
 }
 
-@media screen and (max-width: 820px)
+@media screen and (max-width: 768px)
 {
     div.headtext{
         display: flex;
         justify-content: flex-start;
         font-size: 3em;
     }
+
+    .bio{
+        transform: scale(0);
+    }
     .card{
         margin: 1em;
+        height: 100%;
+        width: 100%;
     }
     .card-collection{
-        margin-top: 7rem;
+        margin-top: 8rem;
+    }
+
+    .name{
+        font-size: 2rem;
     }
 
     .modal{
@@ -245,17 +257,17 @@ a{
     }
 
     .modal-header{
-        font-size: 1rem;
+        font-size: 1.2rem;
 
     }
     .modal-body{
-        font-size: 0.5rem;
+        font-size: 1rem;
     }
     .modal-header .close-button{
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: 100;
         top: 3%;
-        left: 85%;
+        left: 80%;
         bottom: 90%;
     }
     #card-image{
