--- a/docs/events/events.css
+++ b/docs/events/events.css
@@ -1,36 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@900&family=Montserrat:wght@600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@900&family=Montserrat:wght@400;500;800&display=swap');
-.lds-hourglass {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
-}
-.lds-hourglass:after {
-  content: " ";
-  display: block;
-  border-radius: 50%;
-  width: 0;
-  height: 0;
-  margin: 8px;
-  box-sizing: border-box;
-  border: 32px solid #fff;
-  border-color: #fff transparent #fff transparent;
-  animation: lds-hourglass 1.2s infinite;
-}
-@keyframes lds-hourglass {
-  0% {
-    transform: rotate(0);
-    animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
-  }
-  50% {
-    transform: rotate(900deg);
-    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
-  }
-  100% {
-    transform: rotate(1800deg);
-  }
-}
+
 #bg {
   position: fixed;
   top: 0;
@@ -41,25 +11,27 @@
   min-height: 1024px;
 }
 
-.previous {
-  line-height: 40%;
-  background-color: #b4f0f5cc;
-  color: black;
-}
-
 .headtext {
+  display: flex;
   position: absolute;
+  text-align: center;
   width: 250px;
   height: 77px;
   left: 7%;
   top: 7%;
-
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 900;
   font-size: 10em;
   line-height: 80%;
   color: #ffff;
+}
+
+.headtext #go-back{
+  position: absolute;
+  cursor: pointer;
+  font-size: 3rem;
+  margin: 10px 10px 30px 1500px;
 }
 
 .card-collection {
@@ -139,7 +111,7 @@ button {
   color: white;
   font-family: 'Montserrat', sans-serif;
   border: none;
-  font-size: 15px;
+  font-size: 12px;
   padding: 10px 20px;
   position: fixed;
   bottom: 10%;
@@ -265,7 +237,14 @@ a {
   div.headtext {
     display: flex;
     justify-content: flex-start;
-    font-size: 3em;
+    font-size: 3.5em;
+  }
+
+  .headtext #go-back{
+    position: absolute;
+    cursor: pointer;
+    font-size: 1.5rem;
+    margin: 4px 10px 30px 300px;
   }
 
   .bio {
