--- a/docs/events/events.css
+++ b/docs/events/events.css
@@ -233,7 +233,8 @@ a {
   color: rgba(134, 248, 248, 0.788);
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 320px) and (max-width: 600px) {
+
   div.headtext {
     display: flex;
     justify-content: flex-start;
@@ -245,6 +246,10 @@ a {
     cursor: pointer;
     font-size: 1.5rem;
     margin: 4px 10px 30px 300px;
+  }
+
+  .divider{
+    transform: scale(0);
   }
 
   .bio {
