--- a/docs/events/events.css
+++ b/docs/events/events.css
@@ -245,7 +245,7 @@ a {
     position: absolute;
     cursor: pointer;
     font-size: 1.5rem;
-    margin: 4px 10px 30px 300px;
+    margin: 4px 10px 30px 250px;
   }
 
   .divider{
@@ -282,6 +282,7 @@ a {
     font-size: 1.2rem;
   }
   .modal-body {
+    word-break: break-all;
     font-size: 1rem;
   }
   .modal-header .close-button {
