--- a/src/events/events.css
+++ b/src/events/events.css
@@ -225,6 +225,11 @@ a {
 }
 
 @media screen and (max-width: 768px) {
+ /* BACK BUTTON */
+  a[href="/"] {
+    font-size: 0.625rem !important;
+  }
+
   div.headtext {
     display: flex;
     justify-content: flex-start;
