--- a/src/events/events.css
+++ b/src/events/events.css
@@ -1,17 +1,89 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@900&family=Montserrat:wght@600;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@900&family=Montserrat:wght@400;500;800&display=swap');
-#bg {
-  position: fixed;
+.gradient-wrap {
+  overflow: hidden;
   top: 0;
   left: 0;
   width: 100%;
-  height: auto;
-  min-width: 100%;
-  min-height: 1024px;
+  height:100%;
+  position: fixed;
+}
+.meshgradient>.color {
+  width: 100%;
+  height:100%;
+  position: absolute;
+    display: flex;
+  align-items: center;
+  transform: scale(3) rotate(0deg);
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  margin: auto;
+  background-repeat: no-repeat;
+  mix-blend-mode: overlay;
+}
+
+.c1 {
+  background: radial-gradient(#f0da5d 25%, transparent 50%);
+  background-size: 60% 80%;
+   background-position: 0 0;
+  animation: c1 8s infinite linear;
+}
+.c2 {
+  background:  radial-gradient(#4f8c83 25%, transparent 50%);
+  background-size: 70% 80%;
+   background-position: 0 100%;
+  animation: c2 10s infinite linear;
+}
+
+.c3 {
+  background:   radial-gradient(#4f8c83 25%, transparent 50%);
+    background-size: 80% 80%;
+   background-position: 50% 0;
+    animation: c3 5s infinite linear;
+}
+.c4 {
+  background:    radial-gradient(#efbdc8 25%, transparent 50%);
+  background-size: 80% 80%;
+   background-position: 50% 100%;
+   animation: c4 6s infinite linear;
+}
+@keyframes c1 {
+  50%{ 
+  background-size: 80% 80%;
+   background-position: 50% 100%;
+    transform: scale(3) rotate(-75deg);
+  }
+}
+
+@keyframes c2 {
+  50%{ 
+    background-size: 80% 80%;
+   background-position: 50% 0;
+    transform: scale(3) rotate(90deg);
+  }
+}
+@keyframes c3 {
+  50%{ 
+  background-size: 70% 80%;
+   background-position: 0 100%;
+   transform: scale(3) rotate(8deg);
+  }
+}
+
+@keyframes c4 {
+  50%{ 
+   background-position: 0 0;
+  animation: c1 10s infinite;
+    transform: scale(3) rotate(-36deg);
+  }
 }
 
 .headtext {
-  position: fixed;
+  display: flex;
+  position: absolute;
+  text-align: center;
   width: 250px;
   height: 77px;
   left: 7%;
@@ -166,6 +238,7 @@ button:hover {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   letter-spacing: 0.5px;
+  word-break: break-all;
 }
 
 #overlay {
@@ -224,7 +297,7 @@ a {
   color: rgba(134, 248, 248, 0.788);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
  /* BACK BUTTON */
   a[href="/"] {
     font-size: 0.625rem !important;
@@ -234,6 +307,9 @@ a {
     display: flex;
     justify-content: flex-start;
     font-size: 3em;
+  }
+  .divider{
+    transform: scale(0);
   }
 
   .bio {
@@ -262,6 +338,7 @@ a {
     font-size: 1.2rem;
   }
   .modal-body {
+    word-break: break-all;
     font-size: 1rem;
   }
   .modal-header .close-button {
