--- a/src/contact.css
+++ b/src/contact.css
@@ -64,14 +64,6 @@
   color: #ffffff;
 }
 
-.contact-email-section .email-us h3 {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 43px;
-  letter-spacing: 0.03em;
-  color: #0b74bf;
-}
 
 .contact-email-section a {
   text-decoration: none;
@@ -124,23 +116,18 @@
 .contact-us h3 {
   font-style: normal;
   font-weight: 400;
-  font-size: 36px;
-  line-height: 43px;
-  /* identical to box height */
-  letter-spacing: 0.03em;
-
-  color: #ffffff;
-}
-
-.contact-us h3 {
-  margin-bottom: 5px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 36px;
+  font-size: 22px;
   line-height: 43px;
   letter-spacing: 0.03em;
-  color: #0b74bf;
+  font-weight: bold;
+  color: #0D0D0D;
+  text-shadow:
+      -1px -1px 0 #0b74bf,
+      1px -1px 0 #0b74bf,
+      -1px 1px 0 #0b74bf,
+      1px 1px 0 #0b74bf;  
 }
+
 
 .platforms {
   width: 100%;
