--- a/src/events/events.css
+++ b/src/events/events.css
@@ -5,20 +5,20 @@
   top: 0;
   left: 0;
   width: 100%;
-  height:100%;
+  height: 100%;
   position: fixed;
 }
-.meshgradient>.color {
+.meshgradient > .color {
   width: 100%;
-  height:100%;
+  height: 100%;
   position: absolute;
-    display: flex;
+  display: flex;
   align-items: center;
   transform: scale(3) rotate(0deg);
-  top:0;
-  bottom:0;
-  left:0;
-  right:0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   margin: auto;
   background-repeat: no-repeat;
   mix-blend-mode: overlay;
@@ -27,55 +27,55 @@
 .c1 {
   background: radial-gradient(#f0da5d 25%, transparent 50%);
   background-size: 60% 80%;
-   background-position: 0 0;
+  background-position: 0 0;
   animation: c1 8s infinite linear;
 }
 .c2 {
-  background:  radial-gradient(#4f8c83 25%, transparent 50%);
+  background: radial-gradient(#4f8c83 25%, transparent 50%);
   background-size: 70% 80%;
-   background-position: 0 100%;
+  background-position: 0 100%;
   animation: c2 10s infinite linear;
 }
 
 .c3 {
-  background:   radial-gradient(#4f8c83 25%, transparent 50%);
-    background-size: 80% 80%;
-   background-position: 50% 0;
-    animation: c3 5s infinite linear;
+  background: radial-gradient(#4f8c83 25%, transparent 50%);
+  background-size: 80% 80%;
+  background-position: 50% 0;
+  animation: c3 5s infinite linear;
 }
 .c4 {
-  background:    radial-gradient(#efbdc8 25%, transparent 50%);
+  background: radial-gradient(#efbdc8 25%, transparent 50%);
   background-size: 80% 80%;
-   background-position: 50% 100%;
-   animation: c4 6s infinite linear;
+  background-position: 50% 100%;
+  animation: c4 6s infinite linear;
 }
 @keyframes c1 {
-  50%{ 
-  background-size: 80% 80%;
-   background-position: 50% 100%;
+  50% {
+    background-size: 80% 80%;
+    background-position: 50% 100%;
     transform: scale(3) rotate(-75deg);
   }
 }
 
 @keyframes c2 {
-  50%{ 
+  50% {
     background-size: 80% 80%;
-   background-position: 50% 0;
+    background-position: 50% 0;
     transform: scale(3) rotate(90deg);
   }
 }
 @keyframes c3 {
-  50%{ 
-  background-size: 70% 80%;
-   background-position: 0 100%;
-   transform: scale(3) rotate(8deg);
+  50% {
+    background-size: 70% 80%;
+    background-position: 0 100%;
+    transform: scale(3) rotate(8deg);
   }
 }
 
 @keyframes c4 {
-  50%{ 
-   background-position: 0 0;
-  animation: c1 10s infinite;
+  50% {
+    background-position: 0 0;
+    animation: c1 10s infinite;
     transform: scale(3) rotate(-36deg);
   }
 }
@@ -298,8 +298,8 @@ a {
 }
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
- /* BACK BUTTON */
-  a[href="/"] {
+  /* BACK BUTTON */
+  a[href='/'] {
     font-size: 0.625rem !important;
   }
 
@@ -308,7 +308,7 @@ a {
     justify-content: flex-start;
     font-size: 3em;
   }
-  .divider{
+  .divider {
     transform: scale(0);
   }
 
